--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 
 PORT = 3000
 DB_CNN = mongodb+srv://Mean_user:IByIJX4ou0NLQMbj@meanudemy.u5gfe.mongodb.net/hospitaldb?authSource=admin&replicaSet=atlas-1yz6m2-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
+JWT_WORD = qouefhbvc139847rewil
