--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@
 PORT = 3000
 DB_CNN = mongodb+srv://Mean_user:IByIJX4ou0NLQMbj@meanudemy.u5gfe.mongodb.net/hospitaldb?authSource=admin&replicaSet=atlas-1yz6m2-shard-0&readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=true
 JWT_WORD = qouefhbvc139847rewil
+GOOGLE_ID = 25554944583-v3q8tvt0h6vkh08r09hg8eqqdc83eu3f.apps.googleusercontent.com
+GOOGLE_SECRET = ElHwaYiEccaSXxVq11TAYNBF
